@@ -1,3 +1,8 @@
+    - Fixed bug; when dragging a file into JabRef and asking to move it to the file
+      directory, warning will now be given if the destination file already exists. Patch
+      by Alastair Mailer.
+    - When dragging a file into JabRef and asking to copy or move it to the file directory,
+      it is now possible to rename to an arbitrary name. Patch by Alastair Mailer.
     - Added "review" field to BibTeXML export.
     - Added Reset button to entry fetchers. Patch by Dennis Hartrampf and Ines Moosdorf.
     - Changed Microsoft Office XML export so "number" rather than "issue" is exported
